[gd_scene load_steps=19 format=3 uid="uid://beg5slpgsmuvc"]

[ext_resource type="Script" path="res://src/environment/secret_passage_platform/secret_passage_platform.gd" id="1"]

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(10, 0.2, 2.5)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(10, 0.2, 2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kycr8"]
transparency = 1
albedo_color = Color(0.356863, 0.352941, 0.207843, 1)

[sub_resource type="BoxShape3D" id="9"]
size = Vector3(15, 0.2, 20)

[sub_resource type="BoxMesh" id="8"]
size = Vector3(15, 0.2, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gsg6a"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="Animation" id="6"]
length = 0.001

[sub_resource type="Animation" id="5"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.486275, 0.0235294, 0.905882, 0), Color(0.486275, 0.0235294, 0.905882, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../CharacterBody3D/CollisionShape2/Mesh2:material/0:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.486275, 0.0235294, 0.905882, 0), Color(0.486275, 0.0235294, 0.905882, 0.784314)]
}

[sub_resource type="Animation" id="10"]
resource_name = "move_away"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../CharacterBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-12.5055, 0, 0), Vector3(-47.5055, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_058i7"]
_data = {
"RESET": SubResource("6"),
"fade_in": SubResource("5"),
"move_away": SubResource("10")
}

[sub_resource type="Animation" id="14"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody3D/CollisionShape2/Mesh2:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.486275, 0.0235294, 0.905882, 0)]
}

[sub_resource type="Animation" id="13"]
resource_name = "change_colors"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody3D/CollisionShape2/Mesh2:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.486275, 0.0235294, 0.905882, 0.784314), Color(0.133333, 0.0235294, 0.905882, 0.784314), Color(0.0235294, 0.823529, 0.905882, 0.784314), Color(0.0235294, 0.905882, 0.0784314, 0.784314), Color(0.858824, 0.905882, 0.0235294, 0.784314), Color(0.905882, 0.478431, 0.0235294, 0.784314), Color(0.905882, 0.0235294, 0.0235294, 0.784314), Color(0.905882, 0.0235294, 0.662745, 0.784314), Color(0.486275, 0.0235294, 0.905882, 0.784314), Color(0.133333, 0.0235294, 0.905882, 0.784314), Color(0.0235294, 0.823529, 0.905882, 0.784314), Color(0.0235294, 0.905882, 0.0784314, 0.784314), Color(0.858824, 0.905882, 0.0235294, 0.784314), Color(0.905882, 0.478431, 0.0235294, 0.784314), Color(0.905882, 0.0235294, 0.0235294, 0.784314), Color(0.905882, 0.0235294, 0.662745, 0.784314), Color(0.486275, 0.0235294, 0.905882, 0.784314)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dvnoa"]
_data = {
"RESET": SubResource("14"),
"change_colors": SubResource("13")
}

[sub_resource type="Curve3D" id="15"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 18.8993, 13.7437, 12.8494, 0, 0, 0, 0, 0, 0, 6.28621, 3.62498, 5.87129, 0, 0, 0, 0, 0, 0, 18.8993, 13.7437, 12.8494),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="Animation" id="17"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path3D/PathFollow3D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-20, 60, 0)]
}

[sub_resource type="Animation" id="16"]
resource_name = "move_camera"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 0.5, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path3D/PathFollow3D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-20, 60, 0), Vector3(0, 35, 0), Vector3(0, 35, 0), Vector3(-20, 60, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fade_in"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0uft5"]
_data = {
"RESET": SubResource("17"),
"move_camera": SubResource("16")
}

[node name="SecretPassagePlatform1" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 4.27508e-14, 0, 1, 0, -4.27202e-14, 0, 1, 0, 0, 0)
shape = SubResource("4")

[node name="Mesh" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, -4.27508e-14, 0, 1, 0, 4.27202e-14, 0, 1, -0.0127451, 0, -5.44475e-16)
mesh = SubResource("2")
skeleton = NodePath("../../../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_kycr8")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 4.27202e-14, 0, 1, 0, -4.27202e-14, 0, 1, -12.505, 0, 0)

[node name="CollisionShape2" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("9")

[node name="Mesh2" type="MeshInstance3D" parent="CharacterBody3D/CollisionShape2"]
transform = Transform3D(1, 0, -4.27508e-14, 0, 1, 0, 4.27202e-14, 0, 1, -1.90735e-05, 0, -8.13152e-19)
mesh = SubResource("8")
skeleton = NodePath("../../../../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_gsg6a")

[node name="FadeInAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape3D/Mesh")
libraries = {
"": SubResource("AnimationLibrary_058i7")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dvnoa")
}

[node name="Path3D" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.28621, -0.624984, 8.12871)
curve = SubResource("15")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(0.499986, -0.296183, 0.813777, 0, 0.939644, 0.342011, -0.866001, -0.171001, 0.469834, 18.8993, 13.7437, 12.8494)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Path3D/PathFollow3D"]
remote_path = NodePath("../../../Cinematic")

[node name="Cinematic" type="Camera3D" parent="."]
transform = Transform3D(-0.484083, -0.502709, -0.716158, -2.98015e-08, 0.81843, -0.57453, 0.87499, -0.278121, -0.39621, 17.6131, 13.1187, 20.9781)

[node name="CinematicAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0uft5")
}

[connection signal="animation_finished" from="CinematicAnimation" to="." method="_on_CinematicAnimation_animation_finished"]
